[tool.poetry]
name = "senseclust"
version = "0.0.1"
description = "Clustering of Finnish word senses"
authors = ["Frankie Robertson <frankie@robertson.name>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
nltk = "*"
numpy = "*"
scipy = "*"
matplotlib = "*"
click = ">=7"
finntk = ">=0.0.62"
fastcluster = "*"
networkx = "*"
wikiparse = {git = "https://github.com/frankier/wikiparse.git"}
stiff = {git = "https://github.com/frankier/stiff.git"}
paramiko = "^2.4"
expcomb = {git = "https://github.com/frankier/expcomb.git", commit = "5c40c385566d5eab4c7d488a86f357ec57b69353"}
snakemake = "^5.5.4"
vecstorenn = {git = "https://github.com/frankier/vecstorenn.git"}
sentence-transformers = "^0.2.3"
pyemd = "^0.5.1"
scikit-learn = "^0.22.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
