[tool.poetry]
name = "senseclust"
version = "0.0.1"
description = "Clustering of Finnish word senses"
authors = ["Frankie Robertson <frankie@robertson.name>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
nltk = "*"
numpy = "*"
scipy = "*"
matplotlib = "*"
click = ">=7"
finntk = ">=0.0.66"
fastcluster = "*"
networkx = "*"
wikiparse = {git = "https://github.com/frankier/wikiparse.git"}
stiff = {git = "https://github.com/frankier/stiff.git", rev = "79e3ff6f5b365cfc960934ad25c1494d1da065c5"}
paramiko = "^2.4"
expcomb = {git = "https://github.com/frankier/expcomb.git", rev = "4722095b8757fd8717ee033d327b2447a0e27051"}
snakemake = "^5.5.4"
vecstorenn = {git = "https://github.com/frankier/vecstorenn.git"}
sentence-transformers = "^0.2.3"
pyemd = "^0.5.1"
scikit-learn = "^0.22.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
